--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,5 +5,5 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
 
-    <link rel="stylesheet" href="{{ "/css/github2.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "css/github2.css" | prepend: site.baseurl }}">
 </head>
