--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,5 @@
     <meta name="description" content="{{ site.description }}">
 
     <link rel="stylesheet" href="{{ "css/github2.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "css/rouge.css" | prepend: site.baseurl }}">
 </head>
